# easy-ml-mnist-wasm-example

./: .gitignore  Cargo.toml  LICENSE_MIT  README.md  build.sh  package-lock.json  package.json  webpack.config.js
.github/workflows/: build.yml
src/: lib.rs
tests/: app.rs
www/: index.html  index.js  package-lock.json  package.json  worker.js
